# ytui

./: Cargo.toml  README.md
src/: config.rs  main.rs  utils.rs
src/structs/: comments.rs  continuation.rs  general.rs  mod.rs  next.rs  requests.rs  search.rs  transcript.rs  video.rs
