[package]
name = "ytui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TUI library (my fork)
ratatui = { git = "https://github.com/bolshoytoster/ratatui" }
# ratatui backend
crossterm = "*"
# {,De}serialization
serde = { version = "*", features = ["derive"] }
# JSON (faster than the serde one)
simd-json = "*"
# HTTPS
curl = "*"
# URL decode
urldecode = "*"
# Eval JS (to decrypt `n` challenge to avoid throttling)
# We can't use boa, since it handles some things slightly differerently to browsers,
# and calculates n wrong
js-sandbox = "*"
